js file added and code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-ca">
   <head>
   <meta charset="utf-8">
   <meta name="description" content="The Alien Space game">
@@ -13,5 +13,7 @@
   <title>The Alien Space game</title>
   </head>
   <body>
+    <script src="//cdn.jsdeliver.net/npm/phaser@3.54.0/dist/phaser.js"></script>
+    <script type="module" src="./js/game.js"></script>
   </body>
 </html>
