--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="description" content="The Alien Space game">
   <meta name="keywords" content="mths, icd2o">
   <meta name="author" content="Clara Tyman">
+  <meta name="theme-color" content=""#FFFFFF>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -13,7 +14,7 @@
   <title>The Alien Space game</title>
   </head>
   <body>
-    <script src="//cdn.jsdeliver.net/npm/phaser@3.54.0/dist/phaser.js"></script>
+    <script src= "//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
     <script type="module" src="./js/game.js"></script>
   </body>
 </html>
