--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <title>The Alien Space game</title>
 </head>
 <body>
+  <!-- get the latest release here: hhtp://phaser.io/dowload/stable-->
   <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
   <script type="module" src="js/game.js"></script>
 </body>
